@@ -7,6 +7,7 @@ Version 5.0.6
   Bug #27187 cmd.Parameters.RemoveAt("Id") will cause an error if the last item is requested   
   Bug #27093 Exception when using large values in IN UInt64 parameters 
   Bug #27221 describe SQL command returns all byte array on MySQL versions older than 4.1.15 
+  Bug #26960 Connector .NET 5.0.5 / Visual Studio Plugin 1.1.2 
   
 Version 5.0.5 3/5/2007
 
